--- a/header/pagi.html
+++ b/header/pagi.html
@@ -95,7 +95,8 @@
           
           Con años de experiencia en el sector, un equipo altamente capacitado y una infraestructura que nos permite ofrecer productos frescos y procesados según los más altos estándares, en Diez Group tu mejor opción en el mundo de los productos hidrobiológicos.
           
-          Confianza, calidad y sostenibilidad nos definen.</p>
+          Confianza, calidad y sostenibilidad nos definen.
+        buscanos para el exito </p>
     </div>
 </section>
 
