--- a/header/pagi.html
+++ b/header/pagi.html
@@ -115,8 +115,8 @@
 <footer>
  
   <div class="footer-menu">
-      <a href="#">Inicio</a> |
-      <a href="#">Nosotros</a> |
+      <a href="#">estatus</a> |
+      <a href="#">somos de primer nivel </a> |
       <a href="#">Servicios</a> |
       <a href="#">Contacto</a>
   </div>
