--- a/header/pagi.html
+++ b/header/pagi.html
@@ -14,7 +14,7 @@
 
   <header class="custom-header">
     <div class="logo">
-        <img src="../imagenes/imagen2.webp" alt="Logo de la empresa" width="150" height="150">
+        <img src="../imagenes/images.png" alt="Logo de la empresa" width="150" height="150">
     </div>
     <nav class="nav-menu">
       <ul>
@@ -34,13 +34,13 @@
     <div class="carousel-container">
       <div class="carousel">
           <div class="carousel-slide active">
-              <img src="../imagenes/imagen3.jpg" alt="Imagen 1">
+              <img src="../imagenes/1366_521.jpeg" alt="Imagen 1">
           </div>
           <div class="carousel-slide">
-              <img src="../imagenes/imagen1.jpg" alt="Imagen 2">
+              <img src="../imagenes/71Y3JCrqRnL._AC_UF1000,1000_QL80_.jpg" alt="Imagen 2">
           </div>
           <div class="carousel-slide">
-              <img src="../imagenes/imagen4.jpg" alt="Imagen 3">
+              <img src="../imagenes/filters_quality(95)format(webp).webp" alt="Imagen 3">
           </div>
       </div>
 
@@ -60,19 +60,19 @@
     <div class="carousel-container">
         <div class="carousel">
             <div class="card">
-                <img src="../imagenes/pescadores_pota.jpg" alt="Servicio 1">
+                <img src="../imagenes/Naruto_Uzumaki_HD.webp" alt="Servicio 1">
                 <p>Venta de productos hidrobiologicos</p>
                 <button class="btn-solid">Ver más</button>
                 <button class="btn-outline">Detalles</button>
             </div>
             <div class="card">
-                <img src="../imagenes/c7e2f9c5-bbb5-4df0-8855-428971d4b359.jpg.jpg" alt="Servicio 2">
+                <img src="../imagenes/one-piece_98.webp" alt="Servicio 2">
                 <p>Compra de productos hidrobiologicos</p>
                 <button class="btn-solid">Ver más</button>
                 <button class="btn-outline">Detalles</button>
             </div>
             <div class="card">
-                <img src="../imagenes/IMG0011.jpg" alt="Servicio 3">
+                <img src="../imagenes/w=1500,h=1500,fit=pad.avif" alt="Servicio 3">
                 <p>Corte de anchoveta</p>
                 <button class="btn-solid">Ver más</button>
                 <button class="btn-outline">Detalles</button>
@@ -89,14 +89,11 @@
     </div>
     <div class="text">
         <h2>¿Quienes somos?</h2>
-        <p>En Diez Group, nos especializamos en la comercialización y distribución de productos hidrobiológicos de la más alta calidad. Con un firme compromiso con la sostenibilidad y la innovación, ofrecemos pescados, mariscos y otros productos derivados del medio acuático, garantizando frescura, trazabilidad y respeto por el medio ambiente.
+        <p>Somos un grupo de apasionados del anime, el manga y la cultura japonesa en todas sus formas. Desde los clásicos que marcaron nuestra infancia hasta las series más recientes, vivimos y respiramos el mundo otaku con intensidad.
 
-          Nuestra misión es proporcionar alimentos nutritivos y sostenibles, promoviendo el consumo responsable y apoyando a las comunidades pesqueras. Trabajamos en estrecha colaboración con proveedores certificados y utilizamos procesos que garantizan la conservación de los recursos marinos para las futuras generaciones.
+          En nuestra comunidad encontrarás noticias, reseñas, curiosidades y recomendaciones sobre tus series y personajes favoritos. Además, compartimos contenido sobre cosplay, videojuegos, figuras coleccionables y todo lo relacionado con la cultura geek.
           
-          Con años de experiencia en el sector, un equipo altamente capacitado y una infraestructura que nos permite ofrecer productos frescos y procesados según los más altos estándares, en Diez Group tu mejor opción en el mundo de los productos hidrobiológicos.
-          
-          Confianza, calidad y sostenibilidad nos definen.
-        buscanos para el exito </p>
+          Nuestro objetivo es crear un espacio donde los fans puedan debatir, compartir y disfrutar juntos de su amor por el anime y el manga. ¡Únete a nuestra aventura y sé parte de esta gran familia otaku! </p>
     </div>
 </section>
 
