--- a/header/pagi.html
+++ b/header/pagi.html
@@ -61,19 +61,19 @@
         <div class="carousel">
             <div class="card">
                 <img src="../imagenes/Naruto_Uzumaki_HD.webp" alt="Servicio 1">
-                <p>Venta de productos hidrobiologicos</p>
+                <p>servicio streaming para animes</p>
                 <button class="btn-solid">Ver más</button>
                 <button class="btn-outline">Detalles</button>
             </div>
             <div class="card">
                 <img src="../imagenes/one-piece_98.webp" alt="Servicio 2">
-                <p>Compra de productos hidrobiologicos</p>
+                <p>venta de TCG anime</p>
                 <button class="btn-solid">Ver más</button>
                 <button class="btn-outline">Detalles</button>
             </div>
             <div class="card">
-                <img src="../imagenes/w=1500,h=1500,fit=pad.avif" alt="Servicio 3">
-                <p>Corte de anchoveta</p>
+                <img src="../imagenes/71Y3JCrqRnL._AC_UF1000,1000_QL80_.jpg" alt="Servicio 3">
+                <p>venta de coleccionables</p>
                 <button class="btn-solid">Ver más</button>
                 <button class="btn-outline">Detalles</button>
             </div>
