--- a/header/pagi.html
+++ b/header/pagi.html
@@ -37,7 +37,7 @@
               <img src="../imagenes/1366_521.jpeg" alt="Imagen 1">
           </div>
           <div class="carousel-slide">
-              <img src="../imagenes/71Y3JCrqRnL._AC_UF1000,1000_QL80_.jpg" alt="Imagen 2">
+              <img src="../imagenes/one-piece_98.webp" alt="Imagen 2">
           </div>
           <div class="carousel-slide">
               <img src="../imagenes/filters_quality(95)format(webp).webp" alt="Imagen 3">
@@ -66,14 +66,14 @@
                 <button class="btn-outline">Detalles</button>
             </div>
             <div class="card">
-                <img src="../imagenes/one-piece_98.webp" alt="Servicio 2">
-                <p>venta de TCG anime</p>
+                <img src="../imagenes/w=1500,h=1500,fit=pad.avif" alt="Servicio 2">
+                <p>venta de coleccionables</p>
                 <button class="btn-solid">Ver más</button>
                 <button class="btn-outline">Detalles</button>
             </div>
             <div class="card">
                 <img src="../imagenes/71Y3JCrqRnL._AC_UF1000,1000_QL80_.jpg" alt="Servicio 3">
-                <p>venta de coleccionables</p>
+                <p>venta de TCG animes </p>
                 <button class="btn-solid">Ver más</button>
                 <button class="btn-outline">Detalles</button>
             </div>
