--- a/header/pagi.html
+++ b/header/pagi.html
@@ -84,8 +84,8 @@
 
   <section class="content">
     <div class="images">
-        <img src="../imagenes/cafe.jpeg" alt="Imagen 1">
-        <img src="../imagenes/pesca_4.jpg" alt="Imagen 2">
+        <img src="../imagenes/98.webp" alt="Imagen 1">
+        <img src="../imagenes/salon-del-manga-de-barcelona.jpg" alt="Imagen 2">
     </div>
     <div class="text">
         <h2>¿Quienes somos?</h2>
